--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.profiles.active=tst
 spring.devtools.restart.enabled=false
 
 jwt.secret=SxNAgsTkI1gseLfzLJNLH3P6UzKH
-jwt.expiration=60000
+jwt.expiration=7200000
