--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=tst
+spring.profiles.active=dev
 spring.devtools.restart.enabled=false
 
 jwt.secret=SxNAgsTkI1gseLfzLJNLH3P6UzKH
