--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_fcfae8d2f33c70a
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/springboot
 
-spring.datasource.username=bba43e8a0abf17
-spring.datasource.password=e1d683c4
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
