--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://172.17.0.2:3306/springboot
 spring.datasource.username=root
 spring.datasource.password=123456
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
