--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,3 +1,3 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
