--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.devtools.restart.enabled=false
 jwt.secret=SxNAgsTkI1gseLfzLJNLH3P6UzKH
 jwt.expiration=86400000
 
-spring.profiles.active=dev
+spring.profiles.active=tst
