--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.2</version>
+				<configuration>
+					<repository>vinidg/${project.artifactId}-app</repository>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
