--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,3 @@
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/springboot
+spring.data.mongodb.uri=mongodb://localhost:27017/springboot
 
-spring.datasource.username=root
-spring.datasource.password=123456
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.mongodb.password=123654
