--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,6 +1,6 @@
-spring.data.mongodb.uri=mongodb+srv://vinidg:StoXsXJMwHTkYZAT@cluster0-3v66x.mongodb.net/springboot?retryWrites=true&w=majority
+spring.data.mongodb.uri=@MONGO_URI@
 
-aws.access_key_id=AKIA443IFD4NMPRRKD5Q
-aws.secret_access_key=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
+aws.access_key_id=@AWS_KEY_ID@
+aws.secret_access_key=@AWS_ACCESS_KEY@
 s3.bucket=duarte-store
 s3.region=sa-east-1
