--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
    uri: mongodb://localhost:27017/springboot
 
 aws:
- access_key_id: AKIA443IFD4NMPRRKD5Q
- secret_access_key: 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
+ access_key_id: 
+ secret_access_key: 
  bucket: duarte-store
  region: sa-east-1
