--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,10 +5,11 @@ jwt:
 spring:
  data:
   mongodb:
-   uri: mongodb://vinidg:1234567@localhost:27017/duarte-store
+#   uri: mongodb://vinidg:1234567@localhost:27017/duarte-store
+   uri: mongodb://localhost:27017/duarte-store
 
 aws:
- access_key_id: AKIA443IFD4NFAXDL7NJ
- secret_access_key: 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
+ access_key_id: 
+ secret_access_key: 
  bucket: duarte-store
  region: sa-east-1
