criacao de pedido

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,8 +5,8 @@ jwt:
 spring:
  data:
   mongodb:
-   uri: mongodb://vinidg:1234567@localhost:27017/duarte-store
-#   uri: mongodb://localhost:27017/duarte-store
+#   uri: mongodb://vinidg:1234567@localhost:27017/duarte-store
+   uri: mongodb://localhost:27017/duarte-store
 
 aws:
  access_key_id: 
